--- a/src/partials/about-panel.html
+++ b/src/partials/about-panel.html
@@ -68,6 +68,7 @@
                     <div class="coin   num55"><img src="images/block/55.png" alt=""></div>
                     <div class="coin   num56"><img src="images/block/56.png" alt=""></div>
                     </div>
+                    <div class="animate-delay bgbox"></div>
                 </div>
             </div>
             <div class="txt">
