--- a/src/partials/description-panel.html
+++ b/src/partials/description-panel.html
@@ -3,9 +3,13 @@
         <div class="title"><h2>Описание панелей</h2></div>
         <div class="content">
             <div class="download"><a href="">скачать каталог PDF</a></div>
-            <div class="imgs-wrap">
-                <div class="img"><img src="images/di01.jpg" alt=""></div>
-                <div class="img"><img src="images/di01.jpg" alt=""></div>
+            <div class="imgs-wrap slider-descr">
+                <div class="img one-item"><img src="images/di01.jpg" alt=""></div>
+                <div class="img one-item"><img src="images/di01.jpg" alt=""></div>
+                <div class="img one-item"><img src="images/di01.jpg" alt=""></div>
+                <div class="img one-item"><img src="images/di01.jpg" alt=""></div>
+                <div class="img one-item"><img src="images/di01.jpg" alt=""></div>
+                <div class="img one-item"><img src="images/di01.jpg" alt=""></div>
             </div>
         </div>
     </div>
