--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,7 +10,7 @@
                 <li><a href="#top-slider">примеры </a></li>
                 <li><a href="#bot-slider">варианты</a></li>
                 <li><a href="#color-panel">цвета</a></li>
-                <li><a href="#description-panel">описания</a></li>
+                <li><a href="#description-panel">описание</a></li>
                 <li><a href="#form-button">заказать</a></li>
             </ul>
         </nav>
