--- a/src/partials/top-slider.html
+++ b/src/partials/top-slider.html
@@ -22,7 +22,7 @@
                 <div class="slide">
                     <a class="fancybox img" rel="gallery1" href="images/ts3.jpg" tabindex="0">
                         <div class="price_items">90000 руб.</div>
-                        <div class="img-wrap"><img src="images/ts3.jpg" alt=""></div>
+                        <div class="img-wrap"><img src="images/h2-2.jpg" alt=""></div>
                         <div class="title_items">Две стены гостинная 36 кв. м.</div>
                     </a>
                 </div>
