--- a/src/sass/new.scss
+++ b/src/sass/new.scss
@@ -2,7 +2,7 @@
     .about-panel{    padding: 52px 0 0;
         .mbox{padding: 0 15px;}
         .img{  max-width: 440px; float: left; background-color: #e8e8e8;    padding: 76px 35px; margin-right: 50px; margin-bottom: 40px; overflow: hidden;}
-        .txt{font:300 16px/1.2 'ProximaNova'; color: rgb(90, 90, 90); padding-top: 47px;     max-width: 1477px;
+        .txt{font:300 16px/1.2 'ProximaNova'; color: rgb(90, 90, 90); padding-top: 47px;
             p{margin: 1.25em 0;}
         }
         @media screen and (max-width: 1200px) {
