--- a/src/partials/bot-slider.html
+++ b/src/partials/bot-slider.html
@@ -18,7 +18,7 @@
                         </a>
                         <a href="#" class="single">
                             <div class="convert-img">
-                                <img src="images/sl-1.png" alt="">
+                                <img src="images/h2-2.jpg" alt="">
                             </div>
                             <div class="descript">
                                 <p>Вишня</p>
