--- a/src/partials/5reason.html
+++ b/src/partials/5reason.html
@@ -1,4 +1,4 @@
-<section id="five-reason" class="five-reason">
+<section id="five-reason" class="five-reason" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
     <div class="five-reason-wrap">
         <div class="mbox">
             <div class="title">
@@ -6,14 +6,14 @@
             </div>
             <div class="content">
                 <div class="item">
-                    <div class="img"><img src="images/5r-1.png" alt=""></div>
+                    <div class="img"><img src="images/5r-1.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
                     <div class="txt">
                         <p>Стильный интерьер при минимальных затратах</p>
                         <p>Больше уюта, больше настоящего.Только настоящая древесина.</p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="img"><img src="images/5r-2.png" alt=""></div>
+                    <div class="img"><img src="images/5r-2.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
                     <div class="txt">
                         <p>Огромное количествовариантов приминение</p>
                         <p>Вам не понадобятся гвозди или
@@ -21,14 +21,14 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="img"><img src="images/5r-3.png" alt=""></div>
+                    <div class="img"><img src="images/5r-3.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
                     <div class="txt">
                         <p>Возможность индивидуальногоподбора цвета</p>
                         <p>Больше уюта, больше настоящего.Только настоящая древесина.</p>
                     </div>
                 </div>
                 <div class="item">
-                    <div class="img"><img src="images/5r-4.png" alt=""></div>
+                    <div class="img"><img src="images/5r-4.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
                     <div class="txt">
                         <p>Индивидуальный подборцвета</p>
                         <p>Вам не понадобятся гвозди или
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="item">
-                    <div class="img"><img src="images/5r-5.png" alt=""></div>
+                    <div class="img"><img src="images/5r-5.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
                     <div class="txt">
                         <p>Выезд технологана объкт</p>
                         <p>Больше уюта, больше настоящего. Только настоящая древесина.</p>
