--- a/src/partials/about-panel.html
+++ b/src/partials/about-panel.html
@@ -1,4 +1,4 @@
-<section class="about-panel" id="about-panel">
+<section class="about-panel" id="about-panel" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
     <div class="mbox">
         <div class="content">
             <div class="title">
@@ -7,66 +7,66 @@
             <div class="img">
                <!-- <img class="mobile" src="images/about-img.jpg" alt="">-->
                 <div class="animate-picture animate-section">
-                    <div class="coin animate-delay num1"><img src="images/block/1.png" alt=""></div>
-                    <div class="coin  animate-delay num2"><img src="images/block/2.png" alt=""></div>
-                    <div class="coin  animate-delay num3"><img src="images/block/3.png" alt=""></div>
-                    <div class="coin  animate-delay num4"><img src="images/block/4.png" alt=""></div>
-                    <div class="coin  animate-delay num5"><img src="images/block/5.png" alt=""></div>
-                    <div class="coin  animate-delay num6"><img src="images/block/6.png" alt=""></div>
-                    <div class="coin  animate-delay num7"><img src="images/block/7.png" alt=""></div>
-                    <div class="coin  animate-delay num8"><img src="images/block/8.png" alt=""></div>
-                    <div class="coin  animate-delay num9"><img src="images/block/9.png" alt=""></div>
-                    <div class="coin  animate-delay num10"><img src="images/block/10.png" alt=""></div>
-                    <div class="coin  animate-delay num11"><img src="images/block/11.png" alt=""></div>
-                    <div class="coin  animate-delay num12"><img src="images/block/12.png" alt=""></div>
-                    <div class="coin  animate-delay num13"><img src="images/block/13.png" alt=""></div>
-                    <div class="coin  animate-delay num14"><img src="images/block/14.png" alt=""></div>
-                    <div class="coin  animate-delay num15"><img src="images/block/15.png" alt=""></div>
-                    <div class="coin  animate-delay num16"><img src="images/block/16.png" alt=""></div>
-                    <div class="coin  animate-delay num17"><img src="images/block/17.png" alt=""></div>
-                    <div class="coin  animate-delay num18"><img src="images/block/18.png" alt=""></div>
-                    <div class="coin  animate-delay num19"><img src="images/block/19.png" alt=""></div>
-                    <div class="coin  animate-delay num20"><img src="images/block/20.png" alt=""></div>
-                    <div class="coin  animate-delay num21"><img src="images/block/21.png" alt=""></div>
-                    <div class="coin  animate-delay num22"><img src="images/block/22.png" alt=""></div>
-                    <div class="coin  animate-delay num23"><img src="images/block/23.png" alt=""></div>
-                    <div class="coin  animate-delay num24"><img src="images/block/24.png" alt=""></div>
+                    <div class="coin animate-delay num1"><img src="images/block/1.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num2"><img src="images/block/2.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num3"><img src="images/block/3.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num4"><img src="images/block/4.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num5"><img src="images/block/5.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num6"><img src="images/block/6.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num7"><img src="images/block/7.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num8"><img src="images/block/8.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num9"><img src="images/block/9.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num10"><img src="images/block/10.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num11"><img src="images/block/11.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num12"><img src="images/block/12.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num13"><img src="images/block/13.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num14"><img src="images/block/14.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num15"><img src="images/block/15.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num16"><img src="images/block/16.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num17"><img src="images/block/17.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num18"><img src="images/block/18.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num19"><img src="images/block/19.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num20"><img src="images/block/20.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num21"><img src="images/block/21.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num22"><img src="images/block/22.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num23"><img src="images/block/23.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin  animate-delay num24"><img src="images/block/24.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
                     <div class="animate-delay lleft">
-                    <div class="coin   num25"><img src="images/block/25.png" alt=""></div>
-                    <div class="coin   num26"><img src="images/block/26.png" alt=""></div>
-                    <div class="coin   num27"><img src="images/block/27.png" alt=""></div>
-                    <div class="coin   num28"><img src="images/block/28.png" alt=""></div>
-                    <div class="coin   num29"><img src="images/block/29.png" alt=""></div>
-                    <div class="coin   num30"><img src="images/block/30.png" alt=""></div>
-                    <div class="coin   num31"><img src="images/block/31.png" alt=""></div>
-                    <div class="coin   num32"><img src="images/block/32.png" alt=""></div>
+                    <div class="coin   num25"><img src="images/block/25.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num26"><img src="images/block/26.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num27"><img src="images/block/27.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num28"><img src="images/block/28.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num29"><img src="images/block/29.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num30"><img src="images/block/30.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num31"><img src="images/block/31.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num32"><img src="images/block/32.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
                     </div><div class="animate-delay rright">
-                    <div class="coin   num33"><img src="images/block/33.png" alt=""></div>
-                    <div class="coin   num34"><img src="images/block/34.png" alt=""></div>
-                    <div class="coin   num35"><img src="images/block/35.png" alt=""></div>
-                    <div class="coin   num36"><img src="images/block/36.png" alt=""></div>
-                    <div class="coin   num37"><img src="images/block/37.png" alt=""></div>
-                    <div class="coin   num38"><img src="images/block/38.png" alt=""></div>
-                    <div class="coin   num39"><img src="images/block/39.png" alt=""></div>
-                    <div class="coin   num40"><img src="images/block/40.png" alt=""></div>
+                    <div class="coin   num33"><img src="images/block/33.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num34"><img src="images/block/34.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num35"><img src="images/block/35.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num36"><img src="images/block/36.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num37"><img src="images/block/37.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num38"><img src="images/block/38.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num39"><img src="images/block/39.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num40"><img src="images/block/40.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
                     </div><div class="animate-delay lleft2">
-                    <div class="coin   num41"><img src="images/block/41.png" alt=""></div>
-                    <div class="coin   num42"><img src="images/block/42.png" alt=""></div>
-                    <div class="coin   num43"><img src="images/block/43.png" alt=""></div>
-                    <div class="coin   num44"><img src="images/block/44.png" alt=""></div>
-                    <div class="coin   num45"><img src="images/block/45.png" alt=""></div>
-                    <div class="coin   num46"><img src="images/block/46.png" alt=""></div>
-                    <div class="coin   num47"><img src="images/block/47.png" alt=""></div>
-                    <div class="coin   num48"><img src="images/block/48.png" alt=""></div>
+                    <div class="coin   num41"><img src="images/block/41.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num42"><img src="images/block/42.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num43"><img src="images/block/43.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num44"><img src="images/block/44.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num45"><img src="images/block/45.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num46"><img src="images/block/46.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num47"><img src="images/block/47.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num48"><img src="images/block/48.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
                     </div><div class="animate-delay rright2">
-                    <div class="coin   num49"><img src="images/block/49.png" alt=""></div>
-                    <div class="coin   num50"><img src="images/block/50.png" alt=""></div>
-                    <div class="coin   num51"><img src="images/block/51.png" alt=""></div>
-                    <div class="coin   num52"><img src="images/block/52.png" alt=""></div>
-                    <div class="coin   num53"><img src="images/block/53.png" alt=""></div>
-                    <div class="coin   num54"><img src="images/block/54.png" alt=""></div>
-                    <div class="coin   num55"><img src="images/block/55.png" alt=""></div>
-                    <div class="coin   num56"><img src="images/block/56.png" alt=""></div>
+                    <div class="coin   num49"><img src="images/block/49.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num50"><img src="images/block/50.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num51"><img src="images/block/51.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num52"><img src="images/block/52.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num53"><img src="images/block/53.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num54"><img src="images/block/54.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num55"><img src="images/block/55.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
+                    <div class="coin   num56"><img src="images/block/56.png" alt="" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"></div>
                     </div>
                     <div class="animate-delay bgbox"></div>
                 </div>
