--- a/src/partials/color-panel.html
+++ b/src/partials/color-panel.html
@@ -1,4 +1,4 @@
-<section class="color-panel" id="color-panel">
+<section class="color-panel" id="color-panel" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
     <div class="mbox">
         <div class="title">
             <h2>Цвета панелей</h2>
