--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,7 +1,7 @@
 <section id="contacts" class="contacts">
     <div class="contacts-wrap">
         <div class="mbox cfix">
-            <div class="txt">
+            <div class="txt" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
                 <p>У ВАС ОСТАЛИСЬ ВОПРОСЫ</p>
                 <p>ЗАДАЙТЕ ИХ НАМ</p>
                 <p>НАПИСАВ СООБЩЕНИЕ</p>
