--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <!-- HEADER -->
-<header>
-    <div class="mbox">
+<header onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
+    <div class="mbox" >
     <div class="header-wrap cfix">
         <div class="logo"><span><img alt="false" src="http://test97.sheep.fish/wp-content/themes/wooden/images/logo_h.png"></span></div>
         <nav class="super-nav">
