--- a/src/partials/how-it-work.html
+++ b/src/partials/how-it-work.html
@@ -1,4 +1,4 @@
-<section id="how-it-works" class="how-it-works">
+<section id="how-it-works" class="how-it-works" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
     <div class="mbox">
         <div class="how-it-works-wrap">
             <div class="title">
