--- a/src/partials/top-block.html
+++ b/src/partials/top-block.html
@@ -1,14 +1,14 @@
 <section id="top-block" class="top-block">
     <div class="top-block-wrap">
         <div class="top-block-align mbox cfix">
-            <h1>
+            <h1 onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
                 <p>ИНТЕРЬЕРНЫЕ</p>
                 <p>ДЕРЕВЬЯННЫЕ</p>
                 <p>ПАНЕЛИ ДЛЯ СТЕН</p>
                 <p>И ДРУГИХ ПОВЕРХНОСТЕЙ</p>
             </h1>
             <div class="column1">
-                <div class="img"><img src="images/h1.jpg" alt=""></div>
+                <div class="img" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false"><img src="images/h1.jpg" alt=""></div>
                 <div class="form-button" id="form-button">
                     <div class="show-form"><i></i><span>заказать</span></div>
                     <div class="order-form-wrap">
@@ -37,11 +37,11 @@
                     </div>
                 </div>
             </div>
-            <div class="column2">
+            <div class="column2" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
                 <div class="img"><img src="images/h2-1.jpg" alt=""></div>
                 <div class="img"><img src="images/h2-2.jpg" alt=""></div>
             </div>
-            <div class="column3">
+            <div class="column3" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
                 <div class="img"><img src="images/h3-1.jpg" alt=""></div>
                 <div class="img"><img src="images/h3-2.jpg" alt=""></div>
             </div>
