--- a/src/partials/top-slider.html
+++ b/src/partials/top-slider.html
@@ -1,4 +1,4 @@
-<section id="top-slider" class="top-slider">
+<section id="top-slider" class="top-slider" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
     <div class="top-slider-wrap">
         <div class="mbox">
             <div class="title">
