--- a/src/partials/bot-slider.html
+++ b/src/partials/bot-slider.html
@@ -1,4 +1,4 @@
-<section id="bot-slider">
+<section id="bot-slider" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
     <div class="slider-wrap">
         <div class="conteiner">
             <div class="title">
