--- a/src/partials/description-panel.html
+++ b/src/partials/description-panel.html
@@ -1,4 +1,4 @@
-<section class="description-panel" id="description-panel">
+<section class="description-panel" id="description-panel" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
     <div class="mbox">
         <div class="title"><h2>Описание панелей</h2></div>
         <div class="content">
