--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,4 +1,4 @@
-<section id="faq">
+<section id="faq" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
     <div class="faq-wrap">
         <div class="conteiner">
             <div class="title">
