--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
     <!-- FOOTER -->
     <div class="footer_placeholder"></div>
-    <footer class="footer">
+    <footer class="footer" onselectstart="return false" ondrag="return false" ondragdrop="return false" ondragstart="return false">
         <div class="mbox">
             <div class="footer-wrap">
 
